--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         <a class="btn ghost" href="#contact">Contact Me</a>
       </div>
       <div class="socials" aria-label="Social links">
-        <a class="icon-btn" href="https://www.linkedin.com/in/your-handle" target="_blank" rel="noopener" aria-label="LinkedIn">
+        <a class="icon-btn" href="https://www.linkedin.com/in/sneha259" target="_blank" rel="noopener" aria-label="LinkedIn">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM8.98 8.98h4.78v2.05h.07c.67-1.27 2.3-2.6 4.73-2.6 5.06 0 5.99 3.33 5.99 7.66V24h-5v-6.66c0-1.59-.03-3.63-2.21-3.63-2.21 0-2.55 1.73-2.55 3.52V24h-5V8.98z"/></svg>
         </a>
-        <a class="icon-btn" href="https://github.com/your-username" target="_blank" rel="noopener" aria-label="GitHub">
+        <a class="icon-btn" href="https://github.com/sneha2545" target="_blank" rel="noopener" aria-label="GitHub">
           <img src="assets/icons/github.svg" alt="GitHub" />
         </a>
-        <a class="icon-btn" href="mailto:sneha@example.com" aria-label="Email">
+        <a class="icon-btn" href="mailto:snehagupta25092004@gmail.com" aria-label="Email">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"/></svg>
         </a>
       </div>
@@ -116,7 +116,7 @@
         <div class="edu-left">
           <div class="badge">B.Tech • CSE</div>
           <h4>Roorkee Institute of Technology</h4>
-          <p>2022–2026 • Bachelor of Technology in Computer Science & Engineering</p>
+          <p>2023–2027 • Bachelor of Technology in Computer Science & Engineering</p>
           <ul class="coursework">
             <li>Data Structures & Algorithms</li>
             <li>Object-Oriented Programming</li>
@@ -403,9 +403,9 @@
         <button type="submit" class="btn primary">Send</button>
       </form>
       <div class="links">
-  <a href="https://linkedin.com/in/your-handle" target="_blank" rel="noopener">LinkedIn</a>
-  <a href="https://github.com/your-username" target="_blank" rel="noopener">GitHub</a>
-  <a href="mailto:sneha@example.com">Email</a>
+  <a href="https://www.linkedin.com/in/sneha259" target="_blank" rel="noopener">LinkedIn</a>
+  <a href="https://github.com/sneha2545" target="_blank" rel="noopener">GitHub</a>
+  <a href="mailto:snehagupta25092004@gmail.com">Email</a>
       </div>
     </div>
   </section>
