--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <a class="icon-btn" href="https://github.com/sneha2545" target="_blank" rel="noopener" aria-label="GitHub">
           <img src="assets/icons/github.svg" alt="GitHub" />
         </a>
-        <a class="icon-btn" href="mailto:snehagupta25092004@gmail.com" aria-label="Email">
+        <a class="icon-btn" href="snehagupta25092004@gmail.com" aria-label="Email">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"/></svg>
         </a>
       </div>
@@ -405,7 +405,7 @@
       <div class="links">
   <a href="https://www.linkedin.com/in/sneha259" target="_blank" rel="noopener">LinkedIn</a>
   <a href="https://github.com/sneha2545" target="_blank" rel="noopener">GitHub</a>
-  <a href="mailto:snehagupta25092004@gmail.com">Email</a>
+  <a href="snehagupta25092004@gmail.com">Email</a>
       </div>
     </div>
   </section>
